--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,12 +52,12 @@ if(WIN32)
 endif()
 
 # Set additional project information
-set(COMPANY "f4exb")
+set(COMPANY "oe3bia")
 add_definitions("-DCOMPANY=\"${COMPANY}\"")
 set(APPLICATION_NAME "rpx-100")
 add_definitions("-DAPPLICATION_NAME=\"${APPLICATION_NAME}\"")
-set(APPLICATION_MAINTAINER="Edouard Griffiths, F4EXB <f4exb06@gmail.com>")
-set(COPYRIGHT "Copyright (c) 2019 Edouard Griffiths. All rights reserved.")
+set(APPLICATION_MAINTAINER="Bernhard Isemann, OE3BIA <bernhard@isemann.nl>")
+set(COPYRIGHT "Copyright (c) 2021 Bernhard Isemann. All rights reserved.")
 add_definitions("-DCOPYRIGHT=\"${COPYRIGHT}\"")
 set(IDENTIFIER "com.${COMPANY}.${APPLICATION_NAME}")
 add_definitions("-DIDENTIFIER=\"${IDENTIFIER}\"")
@@ -85,7 +85,7 @@ add_definitions("-Drpx-100_VERSION=\"${rpx-100_VERSION}\"")
 set(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "SDR Rx/Tx software for Airspy, Airspy HF+, BladeRF, HackRF, LimeSDR, PlutoSDR, RTL-SDR, SDRplay, USRP and FunCube")
 set(CPACK_PACKAGE_VENDOR "${COMPANY}")
-set(CPACK_PACKAGE_CONTACT "https://github.com/f4exb/rpx-100")
+set(CPACK_PACKAGE_CONTACT "https://github.com/isemann/RPX-100-SDR")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/Readme.md")
 set(CPACK_PACKAGE_VERSION "${rpx-100_VERSION_MAJOR}.${rpx-100_VERSION_MINOR}.${rpx-100_VERSION_PATCH}${rpx-100_VERSION_SUFFIX}")
 set(CPACK_PACKAGE_VERSION_MAJOR ${rpx-100_VERSION_MAJOR})
